# Coding-Problem

./: .gitignore  CMakeLists.txt  README.md
NFC/: 참고.txt
NFC/Client/: ClientDef.h  ClientMain.cpp  SendEvent.cpp  SendEvent.h
NFC/Server/: Main.js  package-lock.json  package.json
NFC/Server/Component/: Accepter.js
Problem/BAE/: BAE_2164.cpp  CMakeLists.txt
Problem/BAE/20Q1/2630/: BAE_2630.cpp
Problem/BAEK/2630/: BAE_2630.cpp
Problem/BAEK/단계별로풀어보기/1002_터렛/: readMe
Problem/BAEK/단계별로풀어보기/1018_체스판 다시 칠하기/: 1018.cpp  readMe
Problem/BAEK/단계별로풀어보기/11650_좌표 정렬하기/: 11650.cpp
Problem/BAEK/단계별로풀어보기/1712_손익분기점/: 1712.cpp
Problem/BAEK/단계별로풀어보기/3053_택시 기하학/: 3053.cpp
Problem/BAEKJOON/Easy/1934_최소공배수/: 1934.cpp
Problem/Programmers/LINE/: 1번.cpp  2번.cpp  3번.cpp  4번.cpp  5번.cpp
Problem/모두의 알고리즘/: 모두의 알고리즘.url
Problem/모두의 알고리즘/최대이익(Max_Profit) 솔루션/: MaxProfit.cpp
Problem/삼성SW역량테스트/13458_시험감독/: 13458.cpp
Problem/삼성SW역량테스트/13460_구슬_탈출_2_푸는중/: 13460.cpp
Problem/삼성SW역량테스트/14501_퇴사/: 14501.cpp
Problem/삼성SW역량테스트/14889_스타트와_링크/: 14889  14889.cpp
Project/: CMakeLists.txt
Project/BAE/: CMakeLists.txt
Project/CPP_Study/: CPP_Study.sln
Project/CPP_Study/Debug/: Source.ilk
Project/CPP_Study/Source/: Source.vcxproj  Source.vcxproj.filters
Project/CPP_Study/Source/Debug/: vc141.idb
Project/CPP_Study/Source/Debug/Source.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Source.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tips/: CMake_tips.txt
Tips/Http Status Code/: HttpStatsCode.txt
(+63 files in other folders)
